--- a/css/print.css
+++ b/css/print.css
@@ -1,32 +1,15 @@
-@media print {
-    h2 {
-      string-set: h2title content(text);
-    }
+body {
+  color: purple;
   
-    @page  {
-  
-      
-  
-      @bottom-center  {
-        content: string(h2title);
-      }
-      @top-center {
-          content: "anthony!";
-      }
-      @bottom-right {
-          /* bug ici */
-          content: counter(page); 
-      }
-    }
+}
+
+p {
+  /* background: orange; */
+}
+
+@page {
+  @top-right {
+      content: "lol";
+      color: orange;
   }
-  
-  @page :left {
-      margin-right: 50mm;
-  }
-  
-  @page :right {
-      margin-left: 50mm;
-  }
-  
-  body {
-  }
+}
